# geoip-gobject

./: Makefile.am  README.md  configure.ac
docs/reference/: Makefile.am
docs/reference/geoip/: Makefile.am
geoip/: Geoip-1.0.metadata  Makefile.am  geoip-geodata.c  geoip-geodata.h  geoip-gobject-1.0.pc.in  geoip-gobject.h
